add_subdirectory(interfaces)
add_subdirectory(items)
add_subdirectory(objects)
add_subdirectory(scripting)
add_subdirectory(terrain)

add_library(star_game_main STATIC
        StarActorMovementController.cpp
        StarActorMovementController.hpp
        StarAiDatabase.cpp
        StarAiDatabase.hpp
        StarAiTypes.cpp
        StarAiTypes.hpp
        StarAmbient.cpp
        StarAmbient.hpp
        StarAnimation.cpp
        StarAnimation.hpp
        StarArmorWearer.cpp
        StarArmorWearer.hpp
        StarBehaviorDatabase.cpp
        StarBehaviorDatabase.hpp
        StarBehaviorState.cpp
        StarBehaviorState.hpp
        StarBiome.cpp
        StarBiome.hpp
        StarBiomeDatabase.cpp
        StarBiomeDatabase.hpp
        StarBiomePlacement.cpp
        StarBiomePlacement.hpp
        StarCelestialCoordinate.cpp
        StarCelestialCoordinate.hpp
        StarCelestialDatabase.cpp
        StarCelestialDatabase.hpp
        StarCelestialGraphics.cpp
        StarCelestialGraphics.hpp
        StarCelestialParameters.cpp
        StarCelestialParameters.hpp
        StarCelestialTypes.cpp
        StarCelestialTypes.hpp
        StarChatAction.cpp
        StarChatAction.hpp
        StarChatProcessor.cpp
        StarChatProcessor.hpp
        StarChatTypes.cpp
        StarChatTypes.hpp
        StarClientContext.cpp
        StarClientContext.hpp
        StarCodex.cpp
        StarCodex.hpp
        StarCodexDatabase.cpp
        StarCodexDatabase.hpp
        StarCollectionDatabase.cpp
        StarCollectionDatabase.hpp
        StarCollisionBlock.cpp
        StarCollisionBlock.hpp
        StarCollisionGenerator.cpp
        StarCollisionGenerator.hpp
        StarCommandProcessor.cpp
        StarCommandProcessor.hpp
        StarDamage.cpp
        StarDamage.hpp
        StarDamageDatabase.cpp
        StarDamageDatabase.hpp
        StarDamageManager.cpp
        StarDamageManager.hpp
        StarDamageTypes.cpp
        StarDamageTypes.hpp
        StarDanceDatabase.cpp
        StarDanceDatabase.hpp
        StarDrawable.cpp
        StarDrawable.hpp
        StarDungeonGenerator.cpp
        StarDungeonGenerator.hpp
        StarDungeonImagePart.cpp
        StarDungeonImagePart.hpp
        StarDungeonTMXPart.cpp
        StarDungeonTMXPart.hpp
        StarEffectEmitter.cpp
        StarEffectEmitter.hpp
        StarEffectSourceDatabase.cpp
        StarEffectSourceDatabase.hpp
        StarEmoteProcessor.cpp
        StarEmoteProcessor.hpp
        StarEntityFactory.cpp
        StarEntityFactory.hpp
        StarEntityMap.cpp
        StarEntityMap.hpp
        StarEntityRendering.cpp
        StarEntityRendering.hpp
        StarEntityRenderingTypes.cpp
        StarEntityRenderingTypes.hpp
        StarEntitySplash.cpp
        StarEntitySplash.hpp
        StarFallingBlocksAgent.cpp
        StarFallingBlocksAgent.hpp
        StarForceRegions.cpp
        StarForceRegions.hpp
        StarGameTimers.cpp
        StarGameTimers.hpp
        StarGameTypes.cpp
        StarGameTypes.hpp
        StarHumanoid.cpp
        StarHumanoid.hpp
        StarImageMetadataDatabase.cpp
        StarImageMetadataDatabase.hpp
        StarInput.cpp
        StarInput.hpp
        StarInteractionTypes.cpp
        StarInteractionTypes.hpp
        StarInterpolationTracker.cpp
        StarInterpolationTracker.hpp
        StarInventoryTypes.cpp
        StarInventoryTypes.hpp
        StarItem.cpp
        StarItem.hpp
        StarItemBag.cpp
        StarItemBag.hpp
        StarItemDatabase.cpp
        StarItemDatabase.hpp
        StarItemDescriptor.cpp
        StarItemDescriptor.hpp
        StarItemDrop.cpp
        StarItemDrop.hpp
        StarItemRecipe.cpp
        StarItemRecipe.hpp
        StarLightSource.cpp
        StarLightSource.hpp
        StarLiquidTypes.cpp
        StarLiquidTypes.hpp
        StarLiquidsDatabase.cpp
        StarLiquidsDatabase.hpp
        StarMaterialDatabase.cpp
        StarMaterialDatabase.hpp
        StarMaterialRenderProfile.cpp
        StarMaterialRenderProfile.hpp
        StarMaterialTypes.hpp
        StarMicroDungeon.cpp
        StarMicroDungeon.hpp
        StarMonster.cpp
        StarMonster.hpp
        StarMonsterDatabase.cpp
        StarMonsterDatabase.hpp
        StarMovementController.cpp
        StarMovementController.hpp
        StarNameGenerator.cpp
        StarNameGenerator.hpp
        StarNetPacketSocket.cpp
        StarNetPacketSocket.hpp
        StarNetPackets.cpp
        StarNetPackets.hpp
        StarNetworkedAnimator.cpp
        StarNetworkedAnimator.hpp
        StarNpc.cpp
        StarNpc.hpp
        StarNpcDatabase.cpp
        StarNpcDatabase.hpp
        StarObject.cpp
        StarObject.hpp
        StarObjectDatabase.cpp
        StarObjectDatabase.hpp
        StarParallax.cpp
        StarParallax.hpp
        StarParticle.cpp
        StarParticle.hpp
        StarParticleDatabase.cpp
        StarParticleDatabase.hpp
        StarParticleManager.cpp
        StarParticleManager.hpp
        StarPlant.cpp
        StarPlant.hpp
        StarPlantDatabase.cpp
        StarPlantDatabase.hpp
        StarPlantDrop.cpp
        StarPlantDrop.hpp
        StarPlatformerAStar.cpp
        StarPlatformerAStar.hpp
        StarPlatformerAStarTypes.cpp
        StarPlatformerAStarTypes.hpp
        StarPlayer.cpp
        StarPlayer.hpp
        StarPlayerBlueprints.cpp
        StarPlayerBlueprints.hpp
        StarPlayerCodexes.cpp
        StarPlayerCodexes.hpp
        StarPlayerCompanions.cpp
        StarPlayerCompanions.hpp
        StarPlayerDeployment.cpp
        StarPlayerDeployment.hpp
        StarPlayerFactory.cpp
        StarPlayerFactory.hpp
        StarPlayerInventory.cpp
        StarPlayerInventory.hpp
        StarPlayerLog.cpp
        StarPlayerLog.hpp
        StarPlayerStorage.cpp
        StarPlayerStorage.hpp
        StarPlayerTech.cpp
        StarPlayerTech.hpp
        StarPlayerTypes.cpp
        StarPlayerTypes.hpp
        StarPlayerUniverseMap.cpp
        StarPlayerUniverseMap.hpp
        StarProjectile.cpp
        StarProjectile.hpp
        StarProjectileDatabase.cpp
        StarProjectileDatabase.hpp
        StarQuestDescriptor.cpp
        StarQuestDescriptor.hpp
        StarQuestManager.cpp
        StarQuestManager.hpp
        StarQuestTemplateDatabase.cpp
        StarQuestTemplateDatabase.hpp
        StarQuests.cpp
        StarQuests.hpp
        StarRadioMessageDatabase.cpp
        StarRadioMessageDatabase.hpp
        StarRoot.cpp
        StarRoot.hpp
        StarRootLoader.cpp
        StarRootLoader.hpp
        StarServerClientContext.cpp
        StarServerClientContext.hpp
        StarSky.cpp
        StarSky.hpp
        StarSkyParameters.cpp
        StarSkyParameters.hpp
        StarSkyRenderData.cpp
        StarSkyRenderData.hpp
        StarSkyTypes.cpp
        StarSkyTypes.hpp
        StarSongbook.cpp
        StarSongbook.hpp
        StarSpawnTypeDatabase.cpp
        StarSpawnTypeDatabase.hpp
        StarSpawner.cpp
        StarSpawner.hpp
        StarSpeciesDatabase.cpp
        StarSpeciesDatabase.hpp
        StarStagehand.cpp
        StarStagehand.hpp
        StarStagehandDatabase.cpp
        StarStagehandDatabase.hpp
        StarStatCollection.cpp
        StarStatCollection.hpp
        StarStatSet.cpp
        StarStatSet.hpp
        StarStatistics.cpp
        StarStatistics.hpp
        StarStatisticsDatabase.cpp
        StarStatisticsDatabase.hpp
        StarStatusController.cpp
        StarStatusController.hpp
        StarStatusEffectDatabase.cpp
        StarStatusEffectDatabase.hpp
        StarStatusTypes.cpp
        StarStatusTypes.hpp
        StarStoredFunctions.cpp
        StarStoredFunctions.hpp
        StarSystemWorld.cpp
        StarSystemWorld.hpp
        StarSystemWorldClient.cpp
        StarSystemWorldClient.hpp
        StarSystemWorldServer.cpp
        StarSystemWorldServer.hpp
        StarSystemWorldServerThread.cpp
        StarSystemWorldServerThread.hpp
        StarTeamClient.cpp
        StarTeamClient.hpp
        StarTeamManager.cpp
        StarTeamManager.hpp
        StarTechController.cpp
        StarTechController.hpp
        StarTechDatabase.cpp
        StarTechDatabase.hpp
        StarTenantDatabase.cpp
        StarTenantDatabase.hpp
        StarTerrainDatabase.cpp
        StarTerrainDatabase.hpp
        StarTileDamage.cpp
        StarTileDamage.hpp
        StarTileDrawer.cpp
        StarTileDrawer.hpp
        StarTileModification.cpp
        StarTileModification.hpp
        StarTileSectorArray.hpp
        StarTilesetDatabase.cpp
        StarTilesetDatabase.hpp
        StarToolUser.cpp
        StarToolUser.hpp
        StarTreasure.cpp
        StarTreasure.hpp
        StarUniverseClient.cpp
        StarUniverseClient.hpp
        StarUniverseConnection.cpp
        StarUniverseConnection.hpp
        StarUniverseServer.cpp
        StarUniverseServer.hpp
        StarUniverseSettings.cpp
        StarUniverseSettings.hpp
        StarVehicle.cpp
        StarVehicle.hpp
        StarVehicleDatabase.cpp
        StarVehicleDatabase.hpp
        StarVersioningDatabase.cpp
        StarVersioningDatabase.hpp
        StarWarping.cpp
        StarWarping.hpp
        StarWeather.cpp
        StarWeather.hpp
        StarWeatherTypes.cpp
        StarWeatherTypes.hpp
        StarWireProcessor.cpp
        StarWireProcessor.hpp
        StarWiring.cpp
        StarWiring.hpp
        StarWorldClient.cpp
        StarWorldClient.hpp
        StarWorldClientState.cpp
        StarWorldClientState.hpp
        StarWorldGeneration.cpp
        StarWorldGeneration.hpp
        StarWorldImpl.hpp
        StarWorldLayout.cpp
        StarWorldLayout.hpp
        StarWorldParameters.cpp
        StarWorldParameters.hpp
        StarWorldRenderData.hpp
        StarWorldServer.cpp
        StarWorldServer.hpp
        StarWorldServerThread.cpp
        StarWorldServerThread.hpp
        StarWorldStorage.cpp
        StarWorldStorage.hpp
        StarWorldStructure.cpp
        StarWorldStructure.hpp
        StarWorldTemplate.cpp
        StarWorldTemplate.hpp
        StarWorldTiles.cpp
        StarWorldTiles.hpp
)

target_include_directories(star_game_main
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(star_game_main
        PRIVATE
        Star::GameInterfaces
        Star::GameItems
        Star::GameObjects
        Star::GameScripting
        Star::GameTerrain
)

target_precompile_headers(star_game_main REUSE_FROM star_core)

add_library(Star::GameMain ALIAS star_game_main)

# Need to link all objects as a group in GCC/Clang due to circular dependencies.
add_library(star_game_interface INTERFACE)
if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    target_link_libraries(star_game_interface
            INTERFACE
            Star::GameInterfaces
            Star::GameItems
            Star::GameObjects
            Star::GameScripting
            Star::GameTerrain
            Star::GameMain
    )
else()
    target_link_libraries(star_game_interface
            INTERFACE
            $<LINK_GROUP:RESCAN,
            Star::GameInterfaces,
            Star::GameItems,
            Star::GameObjects,
            Star::GameScripting,
            Star::GameTerrain,
            Star::GameMain>
    )
endif()

add_library(Star::Game ALIAS star_game_interface)
