add_library (star_windowing STATIC
        StarButtonGroup.cpp
        StarButtonGroup.hpp
        StarButtonWidget.cpp
        StarButtonWidget.hpp
        StarCanvasWidget.cpp
        StarCanvasWidget.hpp
        StarFlowLayout.cpp
        StarFlowLayout.hpp
        StarFuelWidget.cpp
        StarFuelWidget.hpp
        StarGuiContext.cpp
        StarGuiContext.hpp
        StarGuiReader.cpp
        StarGuiReader.hpp
        StarGuiTypes.cpp
        StarGuiTypes.hpp
        StarImageStretchWidget.cpp
        StarImageStretchWidget.hpp
        StarImageWidget.cpp
        StarImageWidget.hpp
        StarItemGridWidget.cpp
        StarItemGridWidget.hpp
        StarItemSlotWidget.cpp
        StarItemSlotWidget.hpp
        StarKeyBindings.cpp
        StarKeyBindings.hpp
        StarLabelWidget.cpp
        StarLabelWidget.hpp
        StarLargeCharPlateWidget.cpp
        StarLargeCharPlateWidget.hpp
        StarLayout.cpp
        StarLayout.hpp
        StarListWidget.cpp
        StarListWidget.hpp
        StarPane.cpp
        StarPane.hpp
        StarPaneManager.cpp
        StarPaneManager.hpp
        StarPortraitWidget.cpp
        StarPortraitWidget.hpp
        StarProgressWidget.cpp
        StarProgressWidget.hpp
        StarScrollArea.cpp
        StarScrollArea.hpp
        StarSliderBar.cpp
        StarSliderBar.hpp
        StarStackWidget.cpp
        StarStackWidget.hpp
        StarTabSet.cpp
        StarTabSet.hpp
        StarTextBoxWidget.cpp
        StarTextBoxWidget.hpp
        StarVerticalLayout.cpp
        StarVerticalLayout.hpp
        StarWidget.cpp
        StarWidget.hpp
        StarWidgetLuaBindings.cpp
        StarWidgetLuaBindings.hpp
        StarWidgetParsing.cpp
        StarWidgetParsing.hpp
)

target_include_directories(star_windowing
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(star_windowing
        PUBLIC
        Star::Rendering
)

add_library(Star::Windowing ALIAS star_windowing)
